--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
    <head>
 		<meta charset="utf-8">
 		<title>The Space Station | Resort</title>
+	   	<link rel="stylesheet" href="./css/shared.css">
+	   	<link rel="stylesheet" href="./css/shared.css">
 	</head>
 	
    <body>
 		<!-- NAV -->
-		<div>
-			<div>
+		<div class="wrap">
+			<div class="menu-container">
 				<!-- Unordered List -->
-				<ul>
+				<ul class="menu">
 					<a href="#home" id="link"><li>HOME</li></a>
 					<a href="#gallery" id="link"><li>GALLERY</li></a>
 					<a href="#reservations" id="link"><li>RESERVATIONS</li></a>
@@ -21,19 +23,19 @@
 		
 		<!-- HOME -->
 		<div id="home">
-			<div>
-				<div>
-					<span>The Space Station</span>
+			<div class="container">
+				<div class="text-center">
+					<span class="head-main">The Space Station</span>
 				
 				</div>
 			</div>
 		</div>
 		
 		<!-- GALLERY -->
-		<section>
-			<div id="gallery">
+		<section id="gallery">
+			<div class="container">
 				<h1>GALLERY</h1>
-				<div>
+				<div class="flex-container">  <!-- !!!research flex-containers!!! -->
 					
 					<!-- Photo Container 1 -->
 					<div>
