--- a/Practice Login Page.html
+++ b/Practice Login Page.html
@@ -10,6 +10,7 @@
    <body>
     <!-- Login Container -->
     <div class="container">
+	<h3 class="loginHead">Login Page</h3>
       <form class="login">
         <input type="text" name="userName" value="" placeholder="User Name" required>
         <input type="password" name="password" value="" placeholder="Password" required>
