--- a/Practice Login Page.html
+++ b/Practice Login Page.html
@@ -15,7 +15,7 @@
         <input type="text" name="userName" value="" placeholder="User Name" required>
         <input type="password" name="password" value="" placeholder="Password" required>
         <button type="submit">Login</button>
-        <input type="checkbox" name="rememberMe" checked="checked">Remember me
+        <input class="checkbox" type="checkbox" name="rememberMe" checked="checked">Remember me
       </form>
       
       <div class="passHelp">
