--- a/Practice Login Page.html
+++ b/Practice Login Page.html
@@ -4,7 +4,7 @@
    <head>
 		<meta charset="utf-8">
 		<title>Basic Login</title>
-    <link rel="stylesheet" href="">  <!-- Update href -->
+    <link rel="stylesheet" href="./css/login_page.css">  
 	 </head>
 	
    <body>
